Fix psd1 for sign job, move psd1 and change log one level down, add NuGet.config file

--- a/src/ResourceManager/StorageSync/Commands.StorageSync/Commands.StorageSync.csproj
+++ b/src/ResourceManager/StorageSync/Commands.StorageSync/Commands.StorageSync.csproj
@@ -108,7 +108,7 @@
     <None Include="debug.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="..\AzureRM.StorageSync.psd1">
+    <None Include="AzureRM.StorageSync.psd1">
       <Link>AzureRM.StorageSync.psd1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
