Resolve some review comments
Resolve some review comments

--- a/ModuleMappings.json
+++ b/ModuleMappings.json
@@ -155,6 +155,9 @@
     "src/ResourceManager/Scheduler/": [
       "AzureRM.Scheduler"
     ],
+    "src/ResourceManager/Search/": [
+      "AzureRM.Search"
+    ],
     "src/ResourceManager/ServiceBus/": [
       "AzureRM.ServiceBus"
     ],
