Resolve review comments
Resolve review comments.

--- a/src/ResourceManager/Search/Commands.Management.Search/Commands.Management.Search.csproj
+++ b/src/ResourceManager/Search/Commands.Management.Search/Commands.Management.Search.csproj
@@ -100,4 +100,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\..\tools\Common.Dependencies.targets" />
+  <Target Name="AfterBuild">
+    <ItemGroup>
+      <MarkdownFiles Include="$(ProjectDir)help\*.*" />
+    </ItemGroup>
+    <Copy SourceFiles="@(MarkdownFiles)" DestinationFolder="$(OutputPath)\help\" ContinueOnError="false" />
+  </Target>
 </Project>
