--- a/src/ResourceManager/ApiManagement/Commands.ApiManagement.ServiceManagement/packages.config
+++ b/src/ResourceManager/ApiManagement/Commands.ApiManagement.ServiceManagement/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="6.0.2" targetFramework="net452" />
-  <package id="Microsoft.Azure.Management.ApiManagement" version="4.0.2-preview" targetFramework="net452" />
+  <package id="Microsoft.Azure.Management.ApiManagement" version="4.0.3-preview" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="8.1.1" targetFramework="net452" />
 </packages>
