--- a/src/ResourceManager/SignalR/Commands.SignalR.Test/Commands.SignalR.Test.csproj
+++ b/src/ResourceManager/SignalR/Commands.SignalR.Test/Commands.SignalR.Test.csproj
@@ -162,6 +162,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="SessionRecords\**\*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
