--- a/src/ResourceManager/Resources/Commands.ResourceManager/Cmdlets/Commands.Resources.Rest.csproj
+++ b/src/ResourceManager/Resources/Commands.ResourceManager/Cmdlets/Commands.Resources.Rest.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.Azure.Management.ResourceManager, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\packages\Microsoft.Azure.Management.ResourceManager.1.6.0-preview\lib\net452\Microsoft.Azure.Management.ResourceManager.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Microsoft.Azure.Management.ResourceManager.1.9.0-preview\lib\net452\Microsoft.Azure.Management.ResourceManager.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Caching" />
   </ItemGroup>
@@ -116,6 +116,13 @@
     <Compile Include="Handlers\CmdletInfoHandler.cs" />
     <Compile Include="Handlers\UserAgentHandler.cs" />
     <Compile Include="Implementation\CmdletBase\ProviderFeatureCmdletBase.cs" />
+    <Compile Include="Implementation\Deployments\GetAzureDeploymentCmdlet.cs" />
+    <Compile Include="Implementation\Deployments\GetAzureDeploymentOperationCmdlet.cs" />
+    <Compile Include="Implementation\Deployments\NewAzureDeploymentCmdlet.cs" />
+    <Compile Include="Implementation\Deployments\RemoveAzureDeploymentCmdlet.cs" />
+    <Compile Include="Implementation\Deployments\SaveAzureDeploymentTemplateCmdlet.cs" />
+    <Compile Include="Implementation\Deployments\StopAzureDeploymentCmdlet.cs" />
+    <Compile Include="Implementation\Deployments\TestAzureDeploymentCmdlet.cs" />
     <Compile Include="Implementation\Features\GetAzureProviderFeatureCmdlet.cs" />
     <Compile Include="Implementation\Features\RegisterAzureProviderFeatureCmdlet.cs" />
     <Compile Include="Implementation\Locations\GetAzureLocationCmdlet.cs" />
@@ -182,7 +189,10 @@
     <Compile Include="SdkClient\SubscriptionSdkClient.cs" />
     <Compile Include="SdkModels\Deployments\PSCreateResourceGroupDeploymentParameters.cs" />
     <Compile Include="SdkModels\Deployments\DeploymentVariable.cs" />
-    <Compile Include="SdkModels\Deployments\FilterResourceGroupDeploymentOptions.cs" />
+    <Compile Include="SdkModels\Deployments\FilterDeploymentOptions.cs" />
+    <Compile Include="SdkModels\Deployments\PSDeployment.cs" />
+    <Compile Include="SdkModels\Deployments\PSDeploymentCmdletParameters.cs" />
+    <Compile Include="SdkModels\Deployments\PSDeploymentObject.cs" />
     <Compile Include="SdkModels\Deployments\PSResourceGroupDeployment.cs" />
     <Compile Include="SdkModels\Deployments\TemplateFile.cs" />
     <Compile Include="SdkModels\Deployments\TemplateFileParameterV1.cs" />
