--- a/tools/Common.Dependencies.Test.targets
+++ b/tools/Common.Dependencies.Test.targets
@@ -5,6 +5,8 @@
     <LibraryNugetPackageFolder>$(LibraryRoot)src\packages</LibraryNugetPackageFolder>
   </PropertyGroup>
   <Import Project="$(MSBuildThisFileDirectory)\Common.Dependencies.targets" />
+  <Import Project="$(LibraryNugetPackageFolder)\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props" Condition="Exists('$(LibraryNugetPackageFolder)\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props')" />
+  <Import Project="$(LibraryNugetPackageFolder)\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props" Condition="Exists('$(LibraryNugetPackageFolder)\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props')" />
   <ItemGroup>
     <Reference Include="Microsoft.Azure.Management.ResourceManager, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>$(LibraryNugetPackageFolder)\Microsoft.Azure.Management.ResourceManager.1.6.0-preview\lib\net452\Microsoft.Azure.Management.ResourceManager.dll</HintPath>
